--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .verticalLine {
-  border-left: 1px solid white;
+  border-left: 0.5px solid white;
   /* height: 100%; */
   position: absolute;
   /* left: 50%; */
@@ -12,7 +12,32 @@ body {
   margin-bottom: 50px;
 }
 
+.navBar {
+  position: absolute;
+  margin-left: 100px;
+}
+
 h3 {
-  color:brown;
+  color:rgb(166, 36, 30);
   font-size: larger;
+}
+
+.horizontalGradual {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
+}
+
+#footer {
+  height: 40px;
+  line-height: 40px;
+  position: absolute;
+  /* left: 10px; */
+  /* right: 100px; */
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  background: #333;
+  color: #fff;
+  font-family: Arial;
+  font-size: 12px;
+  letter-spacing: 1px;
 }
