--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -1,16 +1,23 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+html,body{
+  height: 100%;
+  /* overflow-x: hidden; */
+}
+
 body {
   color: white;
   background: black;
 }
 
-.verticalLine {
-  border-left: 0.5px solid white;
-  /* height: 100%; */
+/* .verticalLine {
+  border-left: 4px solid yellow;
   position: absolute;
-  /* left: 50%; */
   margin-left: 230px;
   margin-bottom: 50px;
-}
+} */
 
 .navBar {
   position: absolute;
@@ -18,11 +25,15 @@ body {
 }
 
 h3 {
+  /* padding-top: 5px; */
   color:rgb(166, 36, 30);
   font-size: larger;
 }
 
 .horizontalGradual {
+  margin-top: 10px;
+  margin-right: 10px;
+  /* padding-right: 5px; */
   background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
 }
 
@@ -40,4 +51,48 @@ h3 {
   font-family: Arial;
   font-size: 12px;
   letter-spacing: 1px;
+}
+
+#container{
+  margin-left: 230px;
+  padding-left: 10px;
+  padding-right: 400px;
+  /* margin-right: 0px; */
+  border-left: 0.5px solid whitesmoke;
+  /*保证footer是相对于container位置绝对定位*/
+  position:relative;  
+  width:100%;
+  min-height:90%; 
+  /*设置padding-bottom值大于等于footer的height值，以保证main的内容能够全部显示出来而不被footer遮盖；*/  
+  padding-bottom: 30px;  
+  box-sizing: border-box;
+}
+header{
+  width: 100%;
+  font-size: 20px;
+  /* height: 200px; */
+  background: #999;
+}
+.main{
+  width: 100%;
+  height: 400px;
+  /* margin-right: 300000px; */
+  /* padding-right: 300px; */
+  /* background: orange; */
+  background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
+}
+footer{
+  width: 77%;
+  height:30px;   /* footer的高度一定要是固定值*/ 
+  position:absolute;
+  bottom:0px;
+  /* left: 0px; */
+  left:0px;
+  margin-left: 10px;
+  padding-left: 0px;
+  /* background: #333; */
+  background: rgb(88, 19, 14);
+}
+div.right {
+  text-align: right;
 }
