--- a/practice/test.css
+++ b/practice/test.css
@@ -45,7 +45,7 @@ header{
   background: orange;
 }
 footer{
-  width: 80%;
+  width: 100%;
   height:30px;   /* footer的高度一定要是固定值*/ 
   position:absolute;
   bottom:0px;
@@ -54,4 +54,8 @@ footer{
   /* margin-left: 300px; */
   /* padding-left: 800px; */
   background: #333;
+}
+.navBar {
+  position: absolute;
+  margin-left: 100px;
 }
