--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -31,9 +31,10 @@ h3 {
 }
 
 .horizontalGradual {
-  margin-top: 10px;
-  margin-right: 10px;
-  /* padding-right: 5px; */
+  /* padding-top: 10px; */
+  /* margin-top: 5px; */
+  /* margin-right: 10px; */
+  /* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1)); */
   background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
 }
 
@@ -54,17 +55,18 @@ h3 {
 }
 
 #container{
-  margin-left: 230px;
-  padding-left: 10px;
-  padding-right: 400px;
-  /* margin-right: 0px; */
-  border-left: 0.5px solid whitesmoke;
+  /* margin-left: 230px; */
+  /* margin-right: 230px; */
+  /* padding-left: 100px; */
+  /* border-left: 0.5px solid whitesmoke; */
   /*保证footer是相对于container位置绝对定位*/
   position:relative;  
   width:100%;
-  min-height:90%; 
+  /* 最小高度保证屏幕在搜索栏时不需要滚动 */
+  min-height:100%;
   /*设置padding-bottom值大于等于footer的height值，以保证main的内容能够全部显示出来而不被footer遮盖；*/  
   padding-bottom: 30px;  
+  /* margin-bottom: 50px; */
   box-sizing: border-box;
 }
 header{
@@ -82,17 +84,16 @@ header{
   background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
 }
 footer{
-  width: 77%;
+  width: 100%;
   height:30px;   /* footer的高度一定要是固定值*/ 
   position:absolute;
   bottom:0px;
-  /* left: 0px; */
   left:0px;
-  margin-left: 10px;
+  /* margin-left: 10px; */
+  /* margin-bottom: 10px; */
   padding-left: 0px;
-  /* background: #333; */
   background: rgb(88, 19, 14);
 }
-div.right {
+div.right-text {
   text-align: right;
 }
