--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -4,6 +4,7 @@
 }
 html,body{
   height: 100%;
+  padding-right: 8px;
   /* overflow-x: hidden; */
 }
 
@@ -55,15 +56,17 @@ h3 {
 }
 
 #container{
-  /* margin-left: 230px; */
+  margin-left: 230px;
   /* margin-right: 230px; */
-  /* padding-left: 100px; */
-  /* border-left: 0.5px solid whitesmoke; */
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 180px;
+  border-left: 0.5px solid whitesmoke;
   /*保证footer是相对于container位置绝对定位*/
   position:relative;  
-  width:100%;
+  width:80%;
   /* 最小高度保证屏幕在搜索栏时不需要滚动 */
-  min-height:100%;
+  min-height:90%;
   /*设置padding-bottom值大于等于footer的height值，以保证main的内容能够全部显示出来而不被footer遮盖；*/  
   padding-bottom: 30px;  
   box-sizing: border-box;
@@ -75,7 +78,7 @@ h3 {
   /* position: absolute; */
   /* left: 0px; */
   width: 25px;
-  height: 90%;
+  min-height: 90%;
 }
 #right-half {
   border-left: 0.5px solid whitesmoke;
@@ -83,9 +86,23 @@ h3 {
   /* position: relative; */
   /* right: 0px; */
   width:75%;
-  height:90%;
+  min-height:90%;
   margin-right: 230px;
 }
+.left-half {
+  float: left;
+  width: 100%;
+  height: 300px;
+  background-color: blue;
+  margin-right: -300px;
+}
+.right-half {
+  float: right;
+  width: 300px;
+  height: 400px;
+  background-color: yellow;
+}
+
 
 header{
   width: 100%;
@@ -107,9 +124,9 @@ footer{
   position:absolute;
   bottom:0px;
   left:0px;
-  /* margin-left: 10px; */
+  margin-left: 10px;
   /* margin-bottom: 10px; */
-  padding-left: 0px;
+  /* padding-right: 10px; */
   background: rgb(88, 19, 14);
 }
 div.right-text {
