--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -4,7 +4,8 @@
 }
 html,body{
   height: 100%;
-  padding-right: 8px;
+  padding-top: 0px;
+  padding-right: 0px;
   /* overflow-x: hidden; */
 }
 
@@ -26,7 +27,8 @@ body {
 }
 
 h3 {
-  /* padding-top: 5px; */
+  padding-left: 5px;
+  /* margin-right: 5px; */
   color:rgb(166, 36, 30);
   font-size: larger;
 }
@@ -34,7 +36,7 @@ h3 {
 .horizontalGradual {
   /* padding-top: 10px; */
   /* margin-top: 5px; */
-  /* margin-right: 10px; */
+  margin-right: 10px;
   /* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1)); */
   background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
 }
@@ -64,6 +66,7 @@ h3 {
   border-left: 0.5px solid whitesmoke;
   /*保证footer是相对于container位置绝对定位*/
   position:relative;  
+  /* position:absolute; */
   width:80%;
   /* 最小高度保证屏幕在搜索栏时不需要滚动 */
   min-height:90%;
@@ -102,15 +105,13 @@ h3 {
   height: 400px;
   background-color: yellow;
 }
-
-
 header{
   width: 100%;
   font-size: 20px;
   /* height: 200px; */
   background: #999;
 }
-.main{
+.search{
   width: 100%;
   height: 400px;
   /* margin-right: 300000px; */
@@ -124,7 +125,8 @@ footer{
   position:absolute;
   bottom:0px;
   left:0px;
-  margin-left: 10px;
+  /* margin-left: 10px; */
+  margin-right: 10px;
   /* margin-bottom: 10px; */
   /* padding-right: 10px; */
   background: rgb(88, 19, 14);
