--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -111,7 +111,7 @@ header{
   /* height: 200px; */
   background: #999;
 }
-.search{
+#search{
   width: 100%;
   height: 400px;
   /* margin-right: 300000px; */
@@ -120,8 +120,9 @@ header{
   background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(255,0,0,0), rgba(173,37,30,1));
 }
 footer{
+  /* overflow-x: hidden; */
   width: 100%;
-  height:30px;   /* footer的高度一定要是固定值*/ 
+  height:30px;   /* footer的高度一定要是固定值*/
   position:absolute;
   bottom:0px;
   left:0px;
