--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -13,6 +13,27 @@ body {
   color: white;
   background: black;
 }
+/* 首先禁止显示slides */
+.slides {display: none;}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+/* Caption text */
+.caption {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
 
 /* .verticalLine {
   border-left: 4px solid yellow;
@@ -20,6 +41,13 @@ body {
   margin-left: 230px;
   margin-bottom: 50px;
 } */
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
 
 .navBar {
   position: absolute;
