--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -13,26 +13,47 @@ body {
   color: white;
   background: black;
 }
+
+#home {
+  /* position: relative; */
+  padding-left: 70px;
+}
+
 /* 首先禁止显示slides */
 .slides {display: none;}
 
 /* Fading animation */
 .fade {
+  /* transition: all 3s; */
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 2s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 /* Caption text */
 .caption {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  font-size: 16px;
+  /* padding: 40px 12px 0px 100px; */
+  padding-top: 30px;
+  /* padding-right: 120px; */
+  padding-bottom: 25px;
+  padding-left: 325px;
   position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+  bottom: 4px;
+  width: 150%;
+  /* text-align: center; */
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* .verticalLine {
