--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -42,7 +42,7 @@ body {
 }
 
 /* Caption text */
-.caption {
+.movieCaption {
   font-size: 16px;
   /* padding: 40px 12px 0px 100px; */
   padding-top: 30px;
