search no results found feature finish

--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -1,6 +1,6 @@
-#results{
+/* #results{
   display: none;
-}
+} */
 /* https://www.daqianduan.com/6179.html */
 /* https://blog.csdn.net/zgh0711/article/details/78270555 */
 /* https://www.zoo.team/article/text-overflow */
