--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -1,6 +1,9 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Raleway', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  /* font-weight: normal; */
 }
 html,body{
   height: 100%;
@@ -8,8 +11,9 @@ html,body{
   padding-right: 11px;
   color: white;
   background: black;
+  /* 注意 position 和 overflow */
+  /* position: relative; */
   /* overflow-x: hidden; */
-  /* margin-bottom: 10px; */
 }
 
 #home {
@@ -75,6 +79,8 @@ html,body{
 }
 
 .navBar {
+  padding-top: 30px;
+  /* Change to abs? */
   position: absolute;
   margin-left: 100px;
 }
@@ -83,7 +89,8 @@ h3 {
   padding-left: 5px;
   /* margin-right: 5px; */
   color:rgb(166, 36, 30);
-  font-size: larger;
+  /* font-size: larger; */
+  font-weight: bold;
 }
 
 .horizontalGradual {
@@ -149,7 +156,7 @@ header{
   background: #999;
 }
 #search{
-  width: 100%;
+  /* width: 100%; */
   height: 180px;
   /* TODO:使search bg不跟随响应式? */
   width: 750px;
@@ -160,7 +167,8 @@ header{
 }
 .red-dot{
   font-size: 10px;
-  color: red;
+  /* color: rgb(88, 19, 14); */
+  color:rgb(177, 54, 43);
   vertical-align:super;
 }
 /* #red-dot{
@@ -173,6 +181,20 @@ header{
   left: 200px;
   top: 50px;
 }
+.search-button{
+  position: relative;
+  left: 100px;
+  margin-left: 30px;
+  font-size: 10px;
+  padding-left: 11px;
+  padding-right: 11px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+  background-color: black;
+  border-radius: 3px;
+  border:1px solid black;
+}
 label{
   font-size: 11px;
 }
@@ -183,16 +205,23 @@ label{
 /* optgroup { font-size:900px; } */
 footer{
   /* overflow-x: hidden; */
+  font-size: 8px;
+  font-style: italic;
+  /* text-align: center; */
+  color: whitesmoke;
   width: 100%;
   height:30px;   /* footer的高度一定要是固定值*/
   position:absolute;
   bottom:0px;
-  left:0px;
+  left:9px;
   /* right: 30px; */
   /* margin-left: 10000px; */
   /* margin-right: 0px; */
   /* margin-bottom: 10px; */
-  padding-bottom: 10px;
+  padding-top: 8px;
+  /* padding-left: 0px; */
+  /* padding: 20px 0px 0px 0px; */
+  /* padding-bottom: 10px; */
   /* padding-right: 1000px; */
   /* padding-left: -1000px; */
   /* background: rgb(88, 19, 14); */
