--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -1,6 +1,8 @@
-/* #results{
-  display: none;
-} */
+#results{
+  /* position: relative; */
+  /* position: relative; */
+  /* display: none; */
+}
 /* https://www.daqianduan.com/6179.html */
 /* https://blog.csdn.net/zgh0711/article/details/78270555 */
 /* https://www.zoo.team/article/text-overflow */
@@ -18,6 +20,14 @@
   margin-bottom: 20px;
   height: 290px;
   border-left: 6px solid rgb(172, 37, 28);
+  /* background-color: bisque; */
+  background: rgba(240, 236, 236, 0.6);
+}
+.card-text{
+  position: absolute;
+  left: 220px;
+  /* margin-top: 30px; */
+  top: 17px;
 }
 .result-img{
   margin-left: 5px;
