--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -24,10 +24,14 @@
   background: rgba(240, 236, 236, 0.6);
 }
 .card-text{
+  width: 100%;
   position: absolute;
   left: 220px;
   /* margin-top: 30px; */
   top: 17px;
+}
+.card-text.p {
+  font-size: 10px;
 }
 .result-img{
   margin-left: 5px;
@@ -38,4 +42,7 @@
   top: 55px;
   left: 350px;
   position: relative;
+}
+h4{
+  font-weight: bold;
 }
