--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  -webkit-font-smoothing: antialiased;
   /* font-family: 'Roboto', sans-serif; */
   /* font-weight: normal; */
 }
@@ -53,7 +54,8 @@ html,body{
   padding-left: 325px;
   position: absolute;
   bottom: 4px;
-  width: 80%;
+  /* width: 80%; */
+  width: 455px;
   /* text-align: center; */
   background-color: rgba(0, 0, 0, 0.8);
   /* background-color: white; */
@@ -65,7 +67,7 @@ html,body{
   padding-left: 325px;
   position: absolute;
   bottom: 4px;
-  width: 80%;
+  width: 455px;
   background-color: rgba(0, 0, 0, 0.8);
   /* background-color: white; */
 }
@@ -215,12 +217,14 @@ footer{
   bottom:0px;
   left:9px;
   /* right: 30px; */
+  /* margin-top: 300px; */
   /* margin-left: 10000px; */
   /* margin-right: 0px; */
   /* margin-bottom: 10px; */
   padding-top: 8px;
   /* padding-left: 0px; */
   /* padding: 20px 0px 0px 0px; */
+  /* padding-top: 300px; */
   /* padding-bottom: 10px; */
   /* padding-right: 1000px; */
   /* padding-left: -1000px; */
@@ -228,7 +232,9 @@ footer{
   background: rgb(88, 19, 14);
 }
 div.right-text {
+
   text-align: right;
+  margin-top: 80px;
   /* padding-left: 3000000px; */
   /* margin-right: 300000px; */
 }
