--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -1,8 +1,8 @@
-#results{
+/* #results{ */
   /* position: relative; */
   /* position: relative; */
   /* display: none; */
-}
+/* } */
 /* https://www.daqianduan.com/6179.html */
 /* https://blog.csdn.net/zgh0711/article/details/78270555 */
 /* https://www.zoo.team/article/text-overflow */
@@ -14,6 +14,7 @@
   text-overflow: ellipsis;
 }
 .card{
+  width: 750px;
   /* position relative is important */
   position: relative;
   margin-top: 20px;
@@ -30,8 +31,12 @@
   /* margin-top: 30px; */
   top: 17px;
 }
-.card-text.p {
-  font-size: 10px;
+.card-text h4{
+  font-size: 15px;
+  font-weight: 900;
+}
+.card-text p{
+  font-size: 12px;
 }
 .result-img{
   margin-left: 5px;
@@ -42,7 +47,4 @@
   top: 55px;
   left: 350px;
   position: relative;
-}
-h4{
-  font-weight: bold;
 }
