--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -59,7 +59,6 @@
   border-radius: 3px;
   border:1px solid rgb(169, 37, 28);
 }
-
 .result-img{
   margin-left: 5px;
   margin-top: 7px;
@@ -69,4 +68,72 @@
   top: 55px;
   left: 350px;
   position: relative;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 80px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width change to fix */
+  height: 100%;
+  /* height: 10000px; */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.8);
+  /* background: rgba(240, 236, 236, 0.6); */
+  /* margin-bottom: 900px; */
+  /* padding-bottom: 9000px; */
+}
+/* Modal Content */
+.modal-content {
+  color: black;
+  /* background: rgba(240, 236, 236, 0.6); */
+  background: rgb(202, 202, 202);
+  margin: auto;
+  /* 看为什么无法滚到最后显示所有内容 */
+  margin-bottom: 90px;
+  padding: 15px 30px 20px 30px;
+  border: 1px solid #888;
+  /* width: 80%; */
+  width: 800px;
+}
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  text-align: center;
+  float: left;
+  /* width: 33.33%; */
+  width: 185px;
+  padding: 5px;
+  background-color:darkorange;
+}
+.column p {
+  /* color: rebeccapurple; */
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
