--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -117,6 +117,7 @@
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
+  display: none;
   text-align: center;
   float: left;
   /* width: 33.33%; */
@@ -136,4 +137,8 @@
   content: "";
   clear: both;
   display: table;
+}
+
+#no-cast {
+  display: none;
 }
