--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -123,7 +123,7 @@
   /* width: 33.33%; */
   width: 185px;
   padding: 5px;
-  background-color:darkorange;
+  /* background-color:darkorange; */
 }
 .column p {
   /* color: rebeccapurple; */
