--- a/flask_server/static/index.css
+++ b/flask_server/static/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
-  -webkit-font-smoothing: antialiased;
+/*   -webkit-font-smoothing: antialiased; */
   /* font-family: 'Roboto', sans-serif; */
   /* font-weight: normal; */
 }
