--- a/flask_server/static/search.css
+++ b/flask_server/static/search.css
@@ -183,6 +183,13 @@ p.bold-name {
 .review {
   display: none;
 }
+hr.solid {
+  border-top: 1px solid rgb(176, 176, 176);
+  width: 600px;
+  margin-left: 85px;
+  border-radius: 0px;
+}
+
 /* The Close Button */
 .close {
   color: #aaaaaa;
